Fixed overflow issue on start screen when selecting map in Edge browser

--- a/assets/css/dialogs.css
+++ b/assets/css/dialogs.css
@@ -62,6 +62,7 @@ button#charHan{
     background-color: rgba(0,0,0, 0.5);
     box-shadow: inset 1px 1px 4px rgba(0,0,0, 0.7);
     border-radius: 1%;
+    overflow: hidden;
 }
 
 #charDiv{
